Fix sticky header overlap sidebar menu on mobile screen university courses

--- a/careerplus/static_core/shinelearn/css/mobile/executive-course/exec-detail.scss
+++ b/careerplus/static_core/shinelearn/css/mobile/executive-course/exec-detail.scss
@@ -84,7 +84,7 @@
     .main-menu {
         position: absolute;
         padding: 15px;
-        z-index: 2;
+        z-index: 10;
         top: 0;
     }
 
